# corefinder

./: .gitignore  CHANGELOG.md  Gemfile  LICENSE  Pipfile  README.md  URL_SHORTENER.md  _config.yml  index.md  makefile  pyproject.toml  setup.py  setup.py.bak  site-title.html  url_shortener.db
.github/workflows/: changelog.yml  pages.yml
app/: card.py  details.json  main.py  url_shortener.py
documentation/: DETAILING.md  README.md  URL_SHORTENER.md
tests/: debug_shortener.py  simple_test.py  test_main.py  test_redirect.py
